test/files/events-exp-lang-neg/parameters-missing.check
parameters-missing.scala:6: error: Unexpected rhs
  evt e2(x: Int) = e1
                   ^
parameters-missing.scala:8: error: unbound parameters
  evt e3(x: Int) = e1(_)
      ^
two errors found
